working on blurring the background image a bit. Added to stylesheets. need to fix class labels

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,12 @@ body,html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
+    
+    /* Add the blur effect */
+    /* filter: blur(8px);
+    -webkit-filter: blur(8px); */
+   
 }
 
 h1 {
